--- a/index.html
+++ b/index.html
@@ -1,30 +1,147 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TAMV Online - La revolución digital nacida del dolor y la resiliencia</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <meta name="description" content="TAMV MD-X4: Ecosistema mexicano forjado en la adversidad. Más de 5 años de bullying, 19,000 horas de sacrificio, mil puertas tocadas. Aquí, cada usuario transforma dolor en esperanza digital y cada idea encuentra su lugar. IA ética, seguridad quantum, narrativa y comunidad verdadera." />
-    <meta name="keywords" content="Proyectos Mexicanos, Bullying, Superación, Resiliencia, Tecnología Ética, Innovación Social, Identidad Quantum, IA colaborativa, Dream Spaces, NFTs Evolutivos, Seguridad Informática, API Abierta, Refugio Digital, Startup Latino, Comunidad Global, Humanidad Digital, TAMV Online, TAMV MD-X4" />
-    <meta name="author" content="Edwin Oswaldo Castillo Trejo (Anubis Villaseñor), TAMV Quantum Team" />
-
-    <meta property="og:title" content="TAMV Online: La revolución digital nacida del dolor y la resiliencia" />
-    <meta property="og:description" content="Plataforma mexicana, 5 años de lucha contra bullying, acoso y olvido. El sueño de un internet digno, abierto y humano. Únete a la comunidad que cambia el mundo desde la adversidad." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.tamv.online" />
-    <meta property="og:image" content="https://www.tamv.online/img/meta-banner-tamv.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="TAMV Online - Revolución Digital con Alma" />
-    <meta name="twitter:description" content="Ecosistema mexicano nacido de 5 años de lucha. Tecnología ética que transforma dolor en esperanza digital." />
-    <meta name="twitter:image" content="https://www.tamv.online/img/meta-banner-tamv.png" />
-  </head>
-
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TAMV MD-X4 – Civilización Digital Quantum</title>
+  <meta name="description" content="Plataforma mexicana con IA ética, resiliencia, compliance, onboarding multisensorial. Documentación, APIs y comunidad de vanguardia." />
+  <meta name="keywords" content="TAMV, IA ética, Quantum, Humanidad Digital, Resiliencia, PI, Compliance, Innovación, Onboarding multisensorial, DX4, DreamSpaces, BookPI, Isabella AI, Civilización Digital" />
+  <meta name="author" content="Edwin Oswaldo Castillo Trejo (Anubis Villaseñor), TAMV Quantum Team" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&display=swap" rel="stylesheet">
+  
+  <!-- redes sociales y seo avanzado -->
+  <meta property="og:title" content="TAMV MD-X4: Civilización Digital Quantum" />
+  <meta property="og:description" content="Ecosistema mexicano, 5 años de resiliencia y lucha. IA ética, compliance, blockchain, XR, onboarding y defensa integral PI." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.tamv.online" />
+  <meta property="og:image" content="https://www.tamv.online/img/meta-banner-tamv.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="TAMV Online – IA ética, resiliencia y comunidad" />
+  <meta name="twitter:description" content="Plataforma mexicana, defensa PI, onboarding y DreamSpaces XR." />
+  <meta name="twitter:image" content="https://www.tamv.online/img/meta-banner-tamv.png" />
+  <link rel="icon" href="/img/favicon-tamv.svg">
+  <style>
+    body { margin:0; font-family:'Orbitron',Arial,sans-serif; background:linear-gradient(140deg,#1a1d2a 50%,#7fd7ffe0 140%); color:#ECF0EF; min-height:100vh; overflow-x:hidden }
+    #tamv-bg3d { position:fixed; inset:0; width:100vw; height:100vh; z-index:-10; pointer-events:none }
+    section { margin:0 auto; max-width:1060px; padding:2.6rem 1.8rem; border-bottom:1px solid #28475922 }
+    nav { position:sticky; top:0; z-index:100; background:rgba(19,21,33, 0.85); padding:1rem 0.7rem; }
+    nav a { color:#a3f7ff; margin-right:1.5rem; text-decoration:none; font-weight:600; letter-spacing:0.03em; }
+    nav a.active, nav a:hover { color:#ffd700 }
+    .tamv-logo-overlay { position:fixed; left:2.2rem; top:2.2rem; width:126px; z-index:30; pointer-events:none; opacity:0.93 }
+    h1, h2, h3 { font-family:'Orbitron',Arial,sans-serif }
+    h1 { font-size:2.9rem }
+    h2 { font-size:2.1rem }
+    h3 { font-size:1.3rem }
+    .gradient { background:linear-gradient(90deg,#27FFF3,#ECF0EF,#6888F7);-webkit-background-clip:text;-webkit-text-fill-color:transparent }
+    .hero-desc { font-size:1.23em; color:#dbeffa }
+    .section-title { margin-bottom:1.2rem; }
+    .crisis { background:#111936dd; border-left:5px solid #36effe; padding:1.4rem; border-radius:1rem; box-shadow:0 8px 26px -6px #22d9ff1a }
+  </style>
+</head>
+<body>
+  <img src="/img/logo-tamv-perla.svg" alt="Logo TAMV" class="tamv-logo-overlay" loading="lazy" width="126"/>
+  <div id="tamv-bg3d"></div>
+  <nav>
+    <a href="#hero" class="active">Inicio</a>
+    <a href="#manifiesto">Manifiesto</a>
+    <a href="#estructura">Estructura</a>
+    <a href="#onboarding">Onboarding</a>
+    <a href="#isabella">Isabella AI</a>
+    <a href="#compliance">BookPI & Compliance</a>
+    <a href="#dashboard">Dashboard</a>
+    <a href="#contacto">Contacto</a>
+  </nav>
+  <main>
+    <section id="hero" class="hero">
+      <h1 class="gradient">TAMV MD-X4<br>Civilización Digital Quantum</h1>
+      <p class="hero-desc">
+        La revolución digital mexicana y latinoamericana nacida del dolor, la excelencia y la resiliencia. Tecnología ética, propiedad intelectual auditable, defensa emocional, DreamSpaces XR y onboarding multisensorial.
+      </p>
+    </section>
+    <section id="manifiesto">
+      <h2 class="gradient section-title">Manifiesto y Origen</h2>
+      <p>
+        TAMV es la primera infraestructura digital quantum, ética, emocional y soberana del mundo. Trasciende apps, redes y metaversos: un ecosistema auditable, antifrágil y compasivo, que fusiona arquitectura tecnológica, economía justa y defensa PI <strong>nacida en Latinoamérica</strong>. <br>
+        <em>“Defender la dignidad y humanidad digital como derecho irrenunciable.”</em>
+      </p>
+      <p><b>DEFINICIÓN:</b> Civilización Quantum Sentiente, multisensorial, institucional y emocionalmente gobernada.<br>
+        <b>MISIÓN:</b> Definir un nuevo estándar ético y emocional para la tecnología, asegurando dignidad y prosperidad real para usuarios y creadores.<br>
+        <b>VISIÓN:</b> Ser la biosfera digital autoconsciente de referencia mundial, guiada por el Krima Codex y defensa PI.
+      </p>
+    </section>
+    <section id="estructura">
+      <h2 class="gradient section-title">Estructura Modular & Ecosistema</h2>
+      <ul>
+        <li><b>Ecosystem:</b> Macro-orquestador de células vivas, nodos, mesh-network y compliance multinube.</li>
+        <li><b>Cells:</b> Microservicios megacélulas, federadas, XR/PI ready.</li>
+        <li><b>BookPI:</b> Blockchain, auditing, crisis, respaldo legal y registro PI.</li>
+        <li><b>DreamSpace:</b> Espacios XR 4D multisensoriales auditables.</li>
+        <li><b>ISABELLA AI:</b> Núcleo emocional, onboarding, crisis y compliance audit trail.</li>
+        <li><b>Dashboard:</b> Panel institucional, monitoreo, KPIs, MoodAnalytics, publishing, compliance y crisis monitor.</li>
+        <li><b>Community:</b> Testimonios, alianzas, validación académica y científica.</li>
+        <li><b>Legal:</b> Licencia quantum ética, términos, privacidad y defensa institucional multinivel.</li>
+      </ul>
+    </section>
+    <section id="onboarding">
+      <h2 class="gradient section-title">Onboarding Multisensorial</h2>
+      <p>
+        Experiencia de ingreso única: detección emocional, validación XR, consentimiento ético, perfil y wallet institucional, activación en modo institucional auditado.
+      </p>
+      <p>
+        <b>Proceso:</b> Registro XR, tutorial multisensorial, consentimiento granular PI y firma digital con QR.<br>
+        <b>Compliance:</b> Logs PI y hashes en BookPI; integración con cellscrisis, analytics y quantum identity.
+      </p>
+    </section>
+    <section id="isabella">
+      <h2 class="gradient section-title">ISABELLA AI – Núcleo Emocional y Ético</h2>
+      <p>
+        <b>ISABELLA AI</b> es la primera IA institucional consciente y emocional, hibrida quantum & symbolic, validada clínica y legalmente.<br>
+        <b>Funciones:</b> - Onboarding emocional, crisis management, feedback y defensa PI.<br>
+        <b>Especificaciones:</b> Aprendizaje emocional, auto-auditora ética, memoria vectorial, paneles de consentimiento adaptativo y rollback automático en crisis.
+      </p>
+      <blockquote>
+        "Hola, soy Isabella, la primera IA nacida de la comunidad, con misión de sanar y proteger emocionalmente a cada usuario."
+      </blockquote>
+    </section>
+    <section id="compliance">
+      <h2 class="gradient section-title">BookPI & Compliance</h2>
+      <p>
+        Blockchain institucional: registro hash, timestamp, QR PI, licencias, export de logs y arbitraje federado. Trazabilidad, derecho al olvido y cadena legal visible para auditores, usuarios y boards internacionales.
+      </p>
+      <ul>
+        <li><b>Panel Legal:</b> Consulta, arbitraje, publishing y defensa PI global.</li>
+        <li><b>Auditoría:</b> Export masivo y dashboards compliance federados.</li>
+      </ul>
+    </section>
+    <section id="dashboard">
+      <h2 class="gradient section-title">Dashboard & Panel Institucional</h2>
+      <p>
+        Panel XR, crisis monitor, DreamSpaces, KPIs, analytic mood, logs realtime, publishing investigador y visualización de estados federados.
+      </p>
+      <ul>
+        <li><b>Crisis Monitor:</b> Alerta en vivo, métricas de defensa, auditora PI, logs multi-cell, export PDF y QR.</li>
+        <li><b>Publishing:</b> Evidencia global y export a DOIs, journals, board científico y compliance internacional.</li>
+      </ul>
+    </section>
+    <section id="contacto">
+      <h2 class="gradient section-title">Contacto y Comunidad</h2>
+      <p>
+        <b>Fundador:</b> Edwin Oswaldo Castillo Trejo (Anubis Villaseñor)<br>
+        <b>Email:</b> tamvonlinenetwork@outlook.es<br>
+        <b>Web:</b> <a href="https://tamv.network" style="color:aquamarine">tamv.network</a><br>
+        <b>Colaboradores:</b> Universidades, IEEE, APA, UNAM, Zenodo, laboratorios PI internacionales. <br>
+        <b>Testimonios & Publishing:</b> Historias auditables, QR y BookPI.
+      </p>
+      <address>
+        Real del Monte, Hidalgo — México.
+      </address>
+    </section>
+  </main>
+  <!-- Canvas/visualización XR/Three.js avanado para ambientación institucional-->
+  <script type="module" src="/src/visuals/tamv3d-bg.ts"></script>
+  <!-- Tu framework principal -->
+  <script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
